commiting to my branch

--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
-<!-- index.css --> 
+/* 
+index.css  
 
-<!-- ABOUT: this is the style sheet for the universe a la mode choose your own adventure game --> 
-<!-- AUTHOR: Rebecca DeMarco --> 
-<!-- DATE: 10/2/2016 --> 
+ABOUT: this is the style sheet for the universe a la mode choose your own adventure game 
+AUTHOR: Rebecca DeMarco and Julia Worrell 
+DATE: 10/2/2016 
+*/ 
+
