--- a/index.css
+++ b/index.css
@@ -6,3 +6,22 @@ AUTHOR: Rebecca DeMarco and Julia Worrell
 DATE: 10/2/2016 
 */ 
 
+head {
+	text-align: center;
+}
+
+body {
+	text-align: center;
+}
+
+div {
+	border-radius: 5px;
+	border: 2px solid #6495ED;
+	background-color: #BCD2EE;
+	height: 30px;
+	width: 600px;
+	margin: auto;
+	margin-top: 15px;
+	text-align: center;
+	font-family: 'Space Mono', monospace;
+}
