--- a/index.css
+++ b/index.css
@@ -8,20 +8,26 @@ DATE: 10/2/2016
 
 head {
 	text-align: center;
+	font-size: 20px; 
 }
 
 body {
 	text-align: center;
+	font-size: 20px; 
 }
 
 div {
-	border-radius: 5px;
-	border: 2px solid #6495ED;
-	background-color: #BCD2EE;
-	height: 30px;
-	width: 600px;
 	margin: auto;
 	margin-top: 15px;
-	text-align: center;
-	font-family: 'Space Mono', monospace;
+}
+
+button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
